@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# Copyright (C) 2020 Free Software Foundation, Inc.
+# Copyright (C) 2020-2023 Free Software Foundation, Inc.
 #
 # This file is part of groff.
 #
@@ -23,7 +23,8 @@ groff="${abs_top_builddir:-.}/test-groff"
 # Ensure that we get backtrace output across file and pipe boundaries.
 # Savannah #58153.
 OUT=$("$groff" -b -ww -U 2>&1 >/dev/null <<EOF
-.pso printf '\\\s[-20]\\\n'
+.ec @
+.pso printf '@s[-20]'
 EOF
 )
 
